--- a/_config.yml
+++ b/_config.yml
@@ -214,6 +214,7 @@ keep_files:
 plugins:
   - jekyll-toc
   - jekyll-archives
+  - jekyll-mermaid
   - jekyll-diagrams
   - jekyll-email-protect
   - jekyll-feed
