--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
         bundler-cache: true
     - name: Install and Build 🔧
       run: |
-        npm install -g mermaid.cli
+        npm install -g @mermaid-js/mermaid-cli
         bundle exec jekyll build
     - name: Deploy 🚀
       if: github.event_name != 'pull_request'
