--- a/_config.yml
+++ b/_config.yml
@@ -341,6 +341,7 @@ imagemagick:
 jekyll-diagrams:
     # configuration, see https://github.com/zhustec/jekyll-diagrams.
     # feel free to comment out this section if not using jekyll diagrams.
+    configFile: mermaid.json
 
 
 # -----------------------------------------------------------------------------
